src/main/resources/css/reporting.css
/**
 * Copyright (C) 2011 Everit Kft. (http://www.everit.org)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
 .criteria-dropdown-calendar-icon{
    position: absolute;
    top: 19px;
    right: 15px;
    z-index: 2;
    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAIAAACQkWg2AAAARElEQVR4AWMoIBGANFgXr8dE927fw0TkaCDLSf/B4O7duwQZ5Gq4iwNccDGHI4gIARuA6tAYJGig1En0DyVMQFcnkQgA7103vYurRvEAAAAASUVORK5CYII=');
 }
 
 .criteria-dropdown-text-div{
    padding: 10px;
 }
 
 .criteria-dropdown-text{
    width: 100%;
    min-width: 200px;
    height: 2.1428571428571em;
    line-height: 1.4285714285714;
    padding: 4px 5px;
    border: 1px solid #ccc;
    border-radius: 3.01px;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    font-size: inherit;
    margin: 0;
    max-width: 250px;
    vertical-align: baseline;
    width: 100%;
    background: #fff;
    color: #333;
    font-family: inherit;
    font-size: 14px;
 }
 
  .criteria-dropdown-textarea{
    width: 100%;
    min-width: 200px;
    height: 2.1428571428571em;
    line-height: 1.4285714285714;
    padding: 4px 5px;
    border: 1px solid #ccc;
    border-radius: 3.01px;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    font-size: inherit;
    margin: 0;
    max-width:400px;
    vertical-align: baseline;
    width: 100%;
    background: #fff;
    color: #333;
    font-family: inherit;
    font-size: 14px;
 }
 
.criteria-selector.aui-button {
    text-align: left;
    margin: 0
}
.criteria-selector>.criteria-wrap {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 200px
}
.criteria-selector .searcherValue {
    display: inline
}

/* grand total */

.grand-total-container {
    display: table;
    box-sizing: border-box;
    border-spacing: 0;
    table-layout: fixed;
    width: 100%;
    margin-top: 20px;
}

.grand-total {
    float:right;
    border-top: 1px solid #ccc;
}

.grand-total-item {
    display: inline-block;
    font-size: 14px;
    line-height: 1.42857142857143;
    font-weight: bolder;    
    padding: 7px 10px 7px 10px;
}

/* custom reporting classes */

.reporting-search-criteria-container {
    padding: 5px 20px 5px 20px;
    border-top: 1px solid #ccc; 
}

.inline-calendar {
    display: inline;
    margin-right: 10px;
}


.details-tale-container{
    margin-top: 10px;
}

.reporting-table {
    font-size: 14px;
    line-height: 1.42857142857143;
}

.summary-export {
    float:right;
}

.module.summary-module {
    margin-top: 25px;
}

.reporting-table tbody tr:hover {
   background-color: #f5f5f5;
}

.summary-export-container {
    display: table;
    box-sizing: border-box;
    border-spacing: 0;
    table-layout: fixed;
    width: 100%;
}

.action-button-container {
    padding-top: 5px;
    padding-bottom: 5px;
}

/* Custom features */

.search-wrap.basic .search-container.filter {
    display: none;
}

.search-wrap.filter .search-container.basic {
    display: none;
}

.toggle-title {
    cursor: pointer;
}

.mod-header .toggle-title {
    display: inline-block;
}


/* from Atlassian AUI */

.aui-group {
    margin-top: 10px;
}

.module {
    margin-top: 15px;
}

.mod-content {
    margin-top: 10px;
}

.count-pagination {
    clear: both;
    padding-top: 10px;
    table-layout: auto;
}

.results-count {
    font-weight: bold;
}

.aui-tabs.horizontal-tabs>.tabs-menu>.active-tab>a {
    font-weight: bold;
}

.aui-tabs.horizontal-tabs>.tabs-menu>.menu-item>a {   
    padding: 9px 10px;
}

.aui-tabs.horizontal-tabs>.tabs-menu>.menu-item:first-child {
    margin-left: 0px;
}

.aui-button[aria-disabled="true"], .aui-button[aria-disabled="true"]:active, .aui-button[aria-disabled="true"]:focus, .aui-button[aria-disabled="true"]:hover {
    cursor: not-allowed;
}

h2 {    
    margin: 10px 0 0;
}

p:first-child{
    margin: 0;
}

p {
    margin: 0;
}

#error_message{
    color: white;
    text-align: center;
    border: 1px solid;
    border-color: #d04437;
    border-radius: 3px;
    background-color: #d04437;
}

